--- a/razv-news.html
+++ b/razv-news.html
@@ -45,6 +45,9 @@
 				</a>
 			</li>
 		</ul>
+		<a href="#" class="search">
+			Поиск
+		</a>
 	</header>
 	<div class="page">
 		<h2 class="title">
