--- a/razv-stat.html
+++ b/razv-stat.html
@@ -55,6 +55,9 @@
 		</a>
 	</header>
 	<div class="page">
+		<h2 class="title">
+			Полезные статьи
+		</h2>
 		<ul class="news-comp-list">
 			<li class="item clearfix">
 				<div class="time">
