--- a/razv-yslug.html
+++ b/razv-yslug.html
@@ -84,6 +84,98 @@
 					</ul>
 					<button class="button"></button>
 				</a>
+				<div class="stoggle">
+					<ul class="menu clearfix">
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</li>
 			<li class="item" style="background-image: url(img/razv-stat/2.jpg);">
 				<a href="#" class="link">
@@ -118,6 +210,98 @@
 					</ul>
 					<button class="button"></button>
 				</a>
+				<div class="stoggle">
+					<ul class="menu clearfix">
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</li>
 			<li class="item" style="background-image: url(img/razv-stat/3.jpg);">
 				<a href="#" class="link">
@@ -152,6 +336,98 @@
 					</ul>
 					<button class="button"></button>
 				</a>
+				<div class="stoggle">
+					<ul class="menu clearfix">
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</li>
 			<li class="item" style="background-image: url(img/razv-stat/2.jpg);">
 				<a href="#" class="link">
@@ -186,6 +462,98 @@
 					</ul>
 					<button class="button"></button>
 				</a>
+				<div class="stoggle">
+					<ul class="menu clearfix">
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</li>
 			<li class="item" style="background-image: url(img/razv-stat/1.jpg);">
 				<a href="#" class="link">
@@ -220,6 +588,98 @@
 					</ul>
 					<button class="button"></button>
 				</a>
+				<div class="stoggle">
+					<ul class="menu clearfix">
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="item">
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</li>
 			<li class="item" style="background-image: url(img/razv-stat/3.jpg);">
 				<a href="#" class="link">
@@ -266,35 +726,83 @@
 										Самовывоз
 									</a>
 								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
 							</ul>
 						</li>
 						<li class="item">
-							Самовывоз поездом
-							<span class="button"></span>
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
 						</li>
 						<li class="item">
-							Самовывоз автомобилем
-							<span class="button"></span>
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
 						</li>
 						<li class="item">
-							Самовывоз поездом
-							<span class="button"></span>
-						</li>
-						<li class="item">
-							Самовывоз автомобилем
-							<span class="button"></span>
-						</li>
-						<li class="item">
-							Самовывоз поездом
-							<span class="button"></span>
-						</li>
-						<li class="item">
-							Самовывоз автомобилем
-							<span class="button"></span>
-						</li>
-						<li class="item">
-							Самовывоз поездом
-							<span class="button"></span>
+							<a href="#">Самовывоз автомобилем
+								<span class="button"></span>
+							</a>
+							<ul class="sub-menu">
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+								<li class="item">
+									<a href="">
+										Самовывоз
+									</a>
+								</li>
+							</ul>
 						</li>
 					</ul>
 				</div>
