--- a/detal-yslug.html
+++ b/detal-yslug.html
@@ -53,6 +53,10 @@
 		<a href="#" class="search">
 			Поиск
 		</a>
+		<div class="search-block">
+			<input type="text">
+			<button class="button rot45"></button>
+		</div>
 	</header>
 	<div class="c-page">
 		<div class="img-wp">
@@ -110,7 +114,7 @@
 	</div>
 		<!--[if lt IE 9]><script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-
+	<script type="text/javascript" src="js/jquery.js"></script>
 <!-- Маска поля ввода !-->
 	<script src="js/inputmask.min.js"></script>
 	<script src="js/jquery.inputmask.js"></script>
@@ -128,5 +132,6 @@
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="js/yandexmap.js"></script>
 	<script src="js/dev/scripts.js"></script>
+	<script src="js/dev/main.js"></script>
 </body>
 </html>
