--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
 <!-- Окно "спасибо за заявку" !-->
 <form class="popup" id="success">
 	<p>Спасибо, мы свяжемся с Вами в ближайшее время!</p>
-</form><script src="js/jquery-2.1.3.min.js"></script>
+</form><script src="js/jquery.js"></script>
 
 <!--[if lt IE 9]><script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
